...
    <string name="password_session_only_note">This password will be used only for the current session. Set up a strong biometric or screen lock to enable secure saving.</string>
    <string name="password_remove_saved_action">Remove saved password</string>
    <string name="password_save_connect_action">Save &amp; connect</string>
    <string name="password_remove_dialog_title">Remove saved password?</string>
    <string name="password_remove_dialog_message">You will need to enter the NanoKVM password on the next connection.</string>

    <string name="profile_editor_add_title">Add NanoKVM</string>
    <string name="profile_editor_edit_title">Edit connection</string>
    <string name="profile_editor_connection_section">Connection</string>
    <string name="profile_editor_authentication_section">Authentication</string>
    <string name="profile_editor_trust_section">Trust</string>
    <string name="profile_editor_destructive_section">Destructive actions</string>
    <string name="profile_name_label">Name</string>
...
